syntax = "proto3";
package twitch.twirp.example.helloworld;
option go_package = "helloworld";

option csharp_namespace = "Pj.Protobuf.HelloWorld";

service HelloWorld {
    rpc Hello(HelloReq) returns (HelloResp);
}

message HelloReq {
    string subject = 1;
}

message HelloResp {
    string text = 1;
}